[package]
name = "irs"
version = "0.1.0"
authors = ["Nalinkannan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
rfd = "0.12"
winit = "0.29"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
