[package]
name = "irs"
version = "0.1.0"
authors = ["Nalinkannan"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
tokio = { version = "1", features = ["full"] }
image = "0.24"
rfd = "0.12"
winit = "0.29"

[application.desktop]
icon = "icon.png"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
